--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ body {
 }
 
 .quiz-card {
-    width: 30rem;
+    width: 47rem;
 }
 
 .question-footer {
@@ -43,4 +43,41 @@ body {
     display: flex;
     justify-content: center;
     margin-top: 24px;
+}
+
+.start-container {
+    background-image: url(QuizappImg/brainbg.jpg);
+    background-size: cover;
+    background-position: center;
+    justify-content: center;
+    font-size: 30px;
+    padding: 0 200px 0px 200px;
+}
+
+.left-bar-card {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 60px;
+    height: 100%;
+    background: rgb(0, 0, 86) !important;
+    color: white;
+    font-size: 26px;
+    padding-top: 24px;
+}
+
+.left-bar-card span {
+    margin-top: 24px;
+    margin-bottom: 24px;
+}
+
+.left-bar-card img {
+    margin-bottom: 32px;
+}
+
+.progress-position-absolut {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
 }
