--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Dancing+Script:wght@400;500;600;700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik+Glitch&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Satisfy&family=Square+Peg&family=Syncopate:wght@400;700&family=Wallpoet&display=swap');
 body {
     background-color: #d9d4cd !important;
 }
@@ -135,4 +136,32 @@ body {
     align-items: center;
     margin-right: 32px;
     font-size: 24px;
+}
+
+.endscreen-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.endscreen-card img {
+    height: 100px;
+    margin: 32px 0 16px 0;
+}
+
+.btn-share {
+    width: 200px;
+}
+
+.btn-replay {
+    width: 200px;
+    color: blue !important;
+}
+
+.pt-sans {
+    font-family: 'PT Sans', sans-serif;
+}
+
+.rubik {
+    font-family: 'Rubik', sans-serif;
 }
