--- a/main.css
+++ b/main.css
@@ -205,3 +205,9 @@ body {
     background: rgb(255 64 64 / 100%) !important;
     color: white;
 }
+
+.trophy-img {
+    position: absolute;
+    right: 0;
+    top: 30vh;
+}
